flux/apps/homepage/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-private
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Apps"
    gethomepage.dev/name: Homepage
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=homepage"
spec:
  parentRefs:
    - name: private-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - home.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 3000
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-public
spec:
  parentRefs:
    - name: public-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - home.nahsi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 3000
          weight: 1
